added localStorage cache before fetch and clean functions

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+TODO: CACHÉ PARA EL EJERCICIO API
+
+HAY QUE GUARDAR LA BÚSQUEDA ANTERIOR, Y CUANDO SE HACE UNA NUEVA, COMPARAR ESA BUSQUEDA CON LA ANTERIOR(QUE YA ESTABA PINTADA, Y ELIMINAR LO QUE YA NO ESTÁ Y PINTAR LO NUEVO)
+
 Ejercicio: Maestro detalle con APIs
 David Carvajal
 •
