--- a/TODO
+++ b/TODO
@@ -10,7 +10,8 @@ TODO:
 
 
 BUGS:
-    * IMPORTANT: No funciona el colocar los favoritos primero
-    * En maestro no acepta click para ir a detalle si pincho en el texto
-    * Quitar cambio de color en hover de botón favoritos para que no de a engaño
-    * Ver gestión de errores en fetch
+    * #04 IMPORTANT: No funciona el colocar los favoritos primero
+    * #05 IMPORTANT: Resolver problemas de sincronía en los fetch
+    * #01 En maestro no acepta click para ir a detalle si pincho en el texto
+    * #02 Quitar cambio de color en hover de botón favoritos para que no de a engaño
+    * #03 Ver gestión de errores en fetch
