--- a/TODO
+++ b/TODO
@@ -10,8 +10,8 @@ TODO:
 
 
 BUGS:
-    * #04 IMPORTANT: No funciona el colocar los favoritos primero
-    * #05 IMPORTANT: Resolver problemas de sincronía en los fetch
+    ✔ * #04 IMPORTANT: No funciona el colocar los favoritos primero @done(21-03-06 22:17)
+    ✔ * #05 IMPORTANT: Resolver problemas de sincronía en los fetch @done(21-03-06 22:17)
     * #01 En maestro no acepta click para ir a detalle si pincho en el texto
     * #02 Quitar cambio de color en hover de botón favoritos para que no de a engaño
     * #03 Ver gestión de errores en fetch
