feat: change fav button style
Use fontawesome heart.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 TODO:
 
-☐ HAY QUE GUARDAR LA BÚSQUEDA ANTERIOR, Y CUANDO SE HACE UNA NUEVA, COMPARAR ESA BUSQUEDA CON LA ANTERIOR(QUE YA ESTABA PINTADA, Y ELIMINAR LO QUE YA NO ESTÁ Y PINTAR LO NUEVO)
+✘ HAY QUE GUARDAR LA BÚSQUEDA ANTERIOR, Y CUANDO SE HACE UNA NUEVA, COMPARAR ESA BUSQUEDA CON LA ANTERIOR(QUE YA ESTABA PINTADA, Y ELIMINAR LO QUE YA NO ESTÁ Y PINTAR LO NUEVO) @cancelled(21-03-07 20:09)
+✔ Hacer una cache de escritura (no de peiticiones a API) para solo repintar lo que sea necesario @done(21-03-07 20:10)
 
 ☐ VOLVER A MAQUETAR, CON MOBILE FIRST
 
