--- a/TODO
+++ b/TODO
@@ -16,3 +16,9 @@ BUGS:
     ✔ * #01 En maestro no acepta click para ir a detalle si pincho en el texto @done(21-03-06 22:28)
     ✔ * #02 Quitar cambio de color en hover de botón favoritos para que no de a engaño @done(21-03-06 22:32)
     * #03 Ver gestión de errores en fetch
+
+
+
+
+RAMA: classesTest Rama de prueba para ver como podríamos usar una clase para evitar tanto parámetro entre funciones
+TODO: Preguntar a David si esto es válido!!!
